--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
+   <link rel="stylesheet" href="css/style.css">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -20,58 +22,42 @@
 </head>
 <body>
   <div class="container">
-    <h2 class="container_title">Reliable, efficient delivery</h2>
-    <h2 class="container_subtitle">Powered by Technology</h2>
-    <p class="container_description">Our Artificial Intelligence powered tools use millions of project data points 
-      to ensure that your project is successful</p>
-
-    <div class="container_item-1">
-      <h3 class="container_item-1-title">Supervisor</h3>
-      <p class="container_item-1-subtitle">Monitors activity to identify project roadblocks</p>
-      <img src="images\icon-supervisor.svg" alt="supervisor" class="container_item-1-img">
+    <div class="container_header">
+      <h2 class="container_header-title text-preset-2">Reliable, efficient delivery</h2>
+      <h2 class="container_header-subtitle  text-preset-1">Powered by Technology</h2>
+      <p class="container_header-description  text-preset-4">Our Artificial Intelligence powered tools use millions of project data points 
+        to ensure that your project is successful</p>
     </div>
 
-    <div class="container_item-2">
-      <h3 class="container_item-2-title">Supervisor</h3>
-      <p class="container_item-2-subtitle">Monitors activity to identify project roadblocks</p>
-      <img src="images\icon-team-builder.svg" alt="icon-team-builder" class="container_item-2-img">
+    <div class="container_item">
+      <div class="container_item-1">
+        <h3 class="container_item-1-title text-preset-3">Supervisor</h3>
+        <p class="container_item-1-subtitle text-preset-5">Monitors activity to identify project roadblocks</p>
+        <img src="images\icon-supervisor.svg" alt="supervisor" class="container_item-1-img">
+      </div>
+
+      <div class="container_item-grid">
+        <div class="container_item-2">
+          <h3 class="container_item-2-title text-preset-3">Team Builder</h3>
+          <p class="container_item-2-subtitle text-preset-5">Scans our talent network to create the optimal team for your project</p>
+          <img src="images\icon-team-builder.svg" alt="icon-team-builder" class="container_item-2-img">
+        </div>
+
+        <div class="container_item-3">
+          <h3 class="container_item-3-title text-preset-3">Karma</h3>
+          <p class="container_item-3-subtitle text-preset-5">Regularly evaluates our talent to ensure quality</p>
+          <img src="images\icon-karma.svg" alt="icon-karma" class="container_item-3-img">
+        </div>
+      </div>
+      <div class="container_item-4">
+        <h3 class="container_item-4-title text-preset-3">Calculator</h3>
+        <p class="container_item-4-subtitle text-preset-5">Uses data from past projects to provide better delivery estimates</p>
+        <img src="images\icon-calculator.svg" alt="icon-calculator " class="container_item-4-img">
+      </div>
     </div>
-
-    <div class="container_item-3">
-      <h3 class="container_item-3-title">Supervisor</h3>
-      <p class="container_item-3-subtitle">Monitors activity to identify project roadblocks</p>
-      <img src="images\icon-karma.svg" alt="icon-karma" class="container_item-3-img">
-    </div>
-
-    <div class="container_item-4">
-      <h3 class="container_item-4-title">Supervisor</h3>
-      <p class="container_item-4-subtitle">Monitors activity to identify project roadblocks</p>
-      <img src="images\icon-calculator.svg" alt="icon-calculator " class="container_item-4-img">
-    </div>
-
-
-  
   </div>
 
 
-  
-  
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
 </body>
 </html>
