--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
     
   <title>Frontend Mentor | Four card feature section</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
 <body>
   <div class="container">
@@ -30,29 +26,29 @@
     </div>
 
     <div class="container_item">
-      <div class="container_item-1">
-        <h3 class="container_item-1-title text-preset-3">Supervisor</h3>
+      <div class="container_item-1 box">
+        <h3 class="container_item-1-title title text-preset-3">Supervisor</h3>
         <p class="container_item-1-subtitle text-preset-5">Monitors activity to identify project roadblocks</p>
-        <img src="images\icon-supervisor.svg" alt="supervisor" class="container_item-1-img">
+        <img src="images\icon-supervisor.svg" alt="supervisor" class="img">
       </div>
 
       <div class="container_item-grid">
-        <div class="container_item-2">
-          <h3 class="container_item-2-title text-preset-3">Team Builder</h3>
+        <div class="container_item-2 box box-no-margin">
+          <h3 class="container_item-2-title title text-preset-3">Team Builder</h3>
           <p class="container_item-2-subtitle text-preset-5">Scans our talent network to create the optimal team for your project</p>
-          <img src="images\icon-team-builder.svg" alt="icon-team-builder" class="container_item-2-img">
+          <img src="images\icon-team-builder.svg" alt="icon-team-builder" class="img">
         </div>
 
-        <div class="container_item-3">
-          <h3 class="container_item-3-title text-preset-3">Karma</h3>
+        <div class="container_item-3 box">
+          <h3 class="container_item-3-title title text-preset-3">Karma</h3>
           <p class="container_item-3-subtitle text-preset-5">Regularly evaluates our talent to ensure quality</p>
-          <img src="images\icon-karma.svg" alt="icon-karma" class="container_item-3-img">
+          <img src="images\icon-karma.svg" alt="icon-karma" class="img">
         </div>
       </div>
-      <div class="container_item-4">
-        <h3 class="container_item-4-title text-preset-3">Calculator</h3>
+      <div class="container_item-4 box">
+        <h3 class="container_item-4-title title text-preset-3">Calculator</h3>
         <p class="container_item-4-subtitle text-preset-5">Uses data from past projects to provide better delivery estimates</p>
-        <img src="images\icon-calculator.svg" alt="icon-calculator " class="container_item-4-img">
+        <img src="images\icon-calculator.svg" alt="icon-calculator " class="img">
       </div>
     </div>
   </div>
